Fix PR java/12739. * java-tree.h (BLOCK_EMPTY_P): Define. * parse.y (java_complete_lhs): Check for empty blocks in TRY_FINALLY_EXPR case.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@73690 138bc75d-0d04-0410-961f-82ee72b054a4